Cursor Recommendation Set 1

--- a/mpl-frontend/index.html
+++ b/mpl-frontend/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MPL - Metalworks Premier League</title>
+    <meta name="description" content="Metalworks Premier League - Community box cricket. View schedule, standings, player leaderboards and live scores." />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="MPL - Metalworks Premier League" />
+    <meta property="og:description" content="Metalworks Premier League - Community box cricket. Schedule, standings, leaderboards and live scores." />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:url" content="https://mpl.supersalessoft.com/" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MPL - Metalworks Premier League" />
+    <meta name="twitter:description" content="Metalworks Premier League - Community box cricket. Schedule, standings, leaderboards and live scores." />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
